# OmniAgent

./: .gitignore  AGENTS.md  LICENSE-APACHE  README.md  README.zh-CN.md  pyproject.toml
docs/: DECISIONS.md  acceptance-pack-v0-closeout-2026-06-14.md  acceptance-pack-v0-closeout-2026-06-15.md  acceptance-pack-v0.md  cli-only-claude-code-v1-closeout-2026-06-15.md  cli-only-claude-code-v1-dogfood-cadence.md  cli-only-claude-code-v1-failure-loop-2026-06-15.md  cli-only-claude-code-v1-governance-ritual-2026-06-15.md  cli-only-claude-code-v1-readiness.md  cli-only-claude-code-v1-release-notes.md  cli-only-claude-code-v1-runbook.md  cli-only-claude-code-v1-verify-reason-codes.md  demo.md  dogfood-acceptance-pack-v0.md  dogfood-acceptance-record-template.md  dogfood-known-failure-ab-template.md  dogfood-real-project-validation-2026-06-13.md  dogfood-stage-acceptance-2026-06-14.md  dogfood-unihack-experience-loop-2026-06-13.md  experience-memory-v0.md  experience-note-lifecycle-closeout-2026-06-15.md  failure-memory-v0.md  omniagent-phase-b-charter-2026-06-15.md  omniagent-phase-c-charter.md  spike-report-template.md  spike-report.md  spike-scenarios.md  v02-closeout-audit-2026-06-14.md  v03-closeout-audit-2026-06-14.md  v03-stage-report-2026-06-14.md  v04-verify-polish-plan.md  v05-closeout-audit-2026-06-14.md  week2-sandbox-runbook.md  week2-spike-report.md
scripts/: cli_only_smoke.py  create_sandbox.ps1  create_sandbox.sh  dogfood_ritual.py  golden_demo.sh
tests/: __init__.py  leak_helpers.py  test_audit.py  test_cli_help.py  test_cli_only_smoke.py  test_cli_smoke.py  (+24 more)
(+56 files in other folders)
